--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-	<a href="pubsub-application/index.html">Pubsub Here</a>
+	<a href="testing/test.txt">Pubsub Here</a>
 </body>
 </html>
